fixes pretty much everything, except that damn binary endpoint test...
