# apidoc.json
@@ -6,85 +6,12 @@
         "version": "1.0.0"
     },
     "consumes": [
-        "application/json",
-        "application/vnd.api+json"
+        "application/json"
     ],
     "produces": [
         "application/json"
     ],
     "paths": {
-        "/": {
-            "get": {
-                "responses": {
-                    "200": {
-                        "description": "Swagger schema",
-                        "schema": {
-                            "type": "object"
-                        }
-                    }
-                }
-            },
-            "post": {
-                "responses": {
-                    "200": {
-                        "description": "Swagger schema",
-                        "schema": {
-                            "type": "object"
-                        }
-                    }
-                }
-            },
-            "put": {
-                "responses": {
-                    "200": {
-                        "description": "Swagger schema",
-                        "schema": {
-                            "type": "object"
-                        }
-                    }
-                }
-            },
-            "patch": {
-                "responses": {
-                    "200": {
-                        "description": "Swagger schema",
-                        "schema": {
-                            "type": "object"
-                        }
-                    }
-                }
-            },
-            "delete": {
-                "responses": {
-                    "200": {
-                        "description": "Swagger schema",
-                        "schema": {
-                            "type": "object"
-                        }
-                    }
-                }
-            },
-            "options": {
-                "responses": {
-                    "200": {
-                        "description": "Swagger schema",
-                        "schema": {
-                            "type": "object"
-                        }
-                    }
-                }
-            },
-            "head": {
-                "responses": {
-                    "200": {
-                        "description": "Swagger schema",
-                        "schema": {
-                            "type": "object"
-                        }
-                    }
-                }
-            }
-        },
         "/artists": {
             "get": {
                 "summary": "Get artists.",
@@ -93,7 +20,7 @@
                         "description": "Get artists",
                         "schema": {
                             "items": {
-                                "$ref": "#/definitions/PaginatedRepresentation"
+                                "$ref": "#/definitions/Artist"
                             }
                         }
                     }
@@ -301,7 +228,9 @@
                     "200": {
                         "description": "Paginated label collection",
                         "schema": {
-                            "$ref": "#/definitions/PaginatedRepresentation"
+                            "items": {
+                                "$ref": "#/definitions/Label"
+                            }
                         }
                     }
                 }
@@ -469,7 +398,7 @@
                         "description": "Get the paginated gigs collection",
                         "schema": {
                             "items": {
-                                "$ref": "#/definitions/PaginatedRepresentation"
+                                "$ref": "#/definitions/Gig"
                             }
                         }
                     }
@@ -609,7 +538,6 @@
             },
             "delete": {
                 "summary": "Delete an existing Gig.",
-                "description": "ApiDoc(statusCodes = {\n  204 = \"Gig deleted\",\n  404 = \"Gig not found\"\n})",
                 "parameters": [
                     {
                         "name": "gig",
@@ -672,9 +600,6 @@
         }
     },
     "definitions": {
-        "PaginatedRepresentation": {
-            "type": "object"
-        },
         "Artist": {
             "required": [
                 "name",
